# SFGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  README.md  config.doxy  generateDoc.bat
Libary/: Rectangel.cpp  SFGL.sln  SFGL.vcxproj  SFGL.vcxproj.filters  Triangel.cpp  Verticies.cpp  loadShader.cpp  loadTexture.cpp  window.cpp
Libary/SFGL/: Rectangel.h  Triangel.h  Verticies.h  loadShader.h  loadTexture.h  window.h
Libary/Shader/: shader.frag
doc/: CMakeLists.txt  config.doxy  index.html
doc/html/: annotated.html  classes.html  dir_0231b8461aefcb2552cd15d18b0b7f6c.html  dir_09e761304027c904456130627fd4dcf5.html  dir_0e666c1f3528b5a2200b63c19c7f5615.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_200d6535585e815884ff2e54d588e6c5.html  dir_4abf86a44cf9770ca4a89810f43d19fe.html  dir_c9bd4b7ccb93ec282a0f1b7dee9d1075.html  dir_e4109f3273bb0d8252bf8e9ca42ee01c.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html
doc/html/d0/d1d/: structsfgl_1_1_verticies_1_1_verticies.html
doc/html/d0/d80/: structsfgl_1_1_window_1_1_window.html
doc/html/d0/dec/: load_shader_8hpp.html  load_shader_8hpp_source.html
doc/html/d0/df9/: _triangel_8cpp.html  _triangel_8cpp_source.html
doc/html/d1/d05/: load_texture_8cpp.html  load_texture_8cpp_source.html
doc/html/d2/d14/: load_shader_8h.html  load_shader_8h_source.html
doc/html/d2/d5a/: window_8hpp.html  window_8hpp_source.html
doc/html/d2/dcf/: namespacesfgl_1_1_window.html
doc/html/d2/dd7/: structsfgl_1_1verticies.html
doc/html/d3/d6b/: structsfgl_1_1_triangel.html
doc/html/d3/df1/: window_8h.html  window_8h_source.html
doc/html/d4/d63/: _rectangel_8hpp.html  _rectangel_8hpp_source.html
doc/html/d4/ddc/: _verticies_8hpp.html  _verticies_8hpp_source.html
doc/html/d6/df0/: _verticies_8h.html  _verticies_8h_source.html
doc/html/d7/d18/: load_shader_8cpp.html  load_shader_8cpp_source.html
doc/html/d7/da9/: namespacesfgl_1_1_shader.html
doc/html/d8/d3f/: structsfgl_1_1_rectangel_1_1_rectangel.html
doc/html/d8/d8e/: window_8cpp.html  window_8cpp_source.html
doc/html/d8/dc6/: namespacesfgl_1_1_rectangel.html
doc/html/d9/d31/: structsfgl_1_1_rectangel_data.html
doc/html/d9/d69/: _verticies_8cpp.html  _verticies_8cpp_source.html  structsfgl_1_1_verticies_data.html
doc/html/d9/dd6/: _r_e_a_d_m_e_8md.html
doc/html/d9/dee/: _debug_2_s_f_g_l_8vcxproj_8_file_list_absolute_8txt.html
doc/html/da/d21/: namespacesfgl.html
doc/html/da/d29/: structsfgl_1_1_triangel_1_1_triangel.html
doc/html/da/d3e/: _triangel_8h.html  _triangel_8h_source.html
doc/html/da/db4/: structverticies-members.html
doc/html/da/dd8/: struct_triangel.html
doc/html/da/dea/: structverticies.html
doc/html/db/d1b/: load_texture_8h.html  load_texture_8h_source.html
doc/html/db/dc9/: namespacesfgl_1_1_triangel.html
doc/html/dd/d79/: _s_f_g_l_8vcxproj_8_file_list_absolute_8txt.html
doc/html/dd/d7f/: struct_triangel-members.html
doc/html/dd/da0/: todo.html
doc/html/de/d02/: shader_8vert.html
doc/html/de/d5c/: _triangel_8hpp.html  _triangel_8hpp_source.html
doc/html/de/d77/: structsfgl_1_1_window_data.html
doc/html/de/dc1/: namespacesfgl_1_1_verticies.html
doc/html/de/de8/: shader_8frag.html
doc/html/df/d56/: _rectangel_8h.html  _rectangel_8h_source.html
doc/html/df/db1/: structsfgl_1_1_triangel_data.html
doc/html/df/dfe/: structsfgl_1_1_verticies.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
externalLib/lib/: glm_static.lib
include/SFGL/Core/: EntityManager.hpp  Types.hpp
include/SFGL/Graphics/: Verticies.hpp  Window.hpp  loadShader.hpp
includes/SFGL/: Rectangel.hpp  Triangel.hpp  Verticies.hpp  loadShader.hpp  window.hpp
src/: Rectangel.cpp  Triangel.cpp  loadShader.cpp  window.cpp
src/SFGL/: Verticies.cpp  window.cpp
src/SFGL/Graphics/: Verticies.cpp  Window.cpp  loadShader.cpp
test/: CMakeLists.txt  SFGL.vcxproj  SFGL.vcxproj.filters  Triangel.cpp  Triangel.h  Verticies.cpp  Verticies.h  loadShader.cpp  loadShader.h  loadShader.hpp  loadTexture.cpp  main.cpp  shader.vert  window.cpp  window.h
